crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__environments__alignat_display.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..48
  matrix Aligned - @0..48
    row 0:
      row @19..20
        run "a" @19..20
      row @22..25
        run "=" @22..23
        run "b" @24..25
      row @28..29
        run "c" @28..29
      row @31..34
        run "=" @31..32
        run "d" @33..34
-- problems --
