crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__environments__array_display.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..44
  matrix Matrix - @0..44
    row 0:
      row @18..19
        run "a" @18..19
      row @22..23
        run "b" @22..23
    row 1:
      row @27..28
        run "c" @27..28
      row @31..32
        run "d" @31..32
-- problems --
